--- a/frontend-angular/src/app/core/layouts/sidebar-portal/sidebar-portal.scss
+++ b/frontend-angular/src/app/core/layouts/sidebar-portal/sidebar-portal.scss
@@ -1220,7 +1220,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 50;
+    z-index: 65;
   }
 
   .mobile-only,
